# aes-cryptify

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
acryptify/: CMakeLists.txt  main.cpp
adecryptify/: CMakeLists.txt  main.cpp
libaescryptify/: CMakeLists.txt
libaescryptify/include/aescryptify/: codec.h
libaescryptify/src/: codec.cpp
test/: CMakeLists.txt  tests_common.h  tests_decrypt.cpp  tests_encrypt.cpp
